Fix order button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ body {
 }
 
 .pizza {
+  position: relative;
   flex: 1 0 300px;
   margin: 20px 20px;
   border: 1px solid black;
@@ -122,7 +123,7 @@ body {
 }
 
 .pizza-box {
-  margin: 0 15px 10px;
+  margin: 0 15px 100px;
 }
 
 .pizza-image {
@@ -158,12 +159,16 @@ body {
 }
 
 .order-button {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
   display: block;
   margin: 25px auto 15px;
   padding: 10px 25px;
   text-transform: uppercase;
   font-size: 1.2em;
   cursor: pointer;
+  transform: translateX(-50%);
 }
 
 .pizza-carousel-menu{
